--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,18 @@ body{
 .bg-red{
     background-color:#cd3d0f;
 }
+.bg-light-black{
+    background-color: #1f1f1f;
+}
+.blue{
+    color:#0b6cff;
+}
+.bg-blue{
+    background-color: #0b6cff;
+}
+.grey{
+    color: grey;
+}
 /* COLORS */
 /* NAVBAR */
 .nav-top{
@@ -63,31 +75,23 @@ section#jumbotron{
 }
 /* SECTION1 */
 
+/* SECTION2 */
+#game-1{
+    background-image: url("/img/it-takes-two-hero-banner-desktop.jpg");
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+
+}
+
+/* /SECTION2 */
+
 
 /* NAVBAR */
 
 /* /NAVBAR */
-.bg-green{
-    background-color: #1abc9c;
-}
-.green{
-    color: #1abc9c;
-}
-.white{
-    color: white;
-}
-.bg-white{
-    background-color: white;
-}
-.bg-blue{
-    background-color: #2c3e50;
-}
-.blue{
-    color: #2c3e50;
-}
-.greyblue{
-    background-color: #3a546d;
-}
+
 /* COLORS */
 
 
