--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ section#jumbotron{
 #jumbotron{
     background-image: url("../img/jumbo-bg.png");
     width: 100%;
-    height: 700px;
+    padding-top: 400px;
     background-size: cover;
     background-position: center center;
 }
