--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 /* COLORS */
 :root{
@@ -32,7 +33,6 @@ body{
 .bg-dark-blue{
     background-color: #161c3b;
 }
-
 .grey{
     color: grey;
 }
@@ -55,6 +55,9 @@ body{
     justify-content: flex-end;
     height: 15px;
 }
+nav{filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.4));
+}
+
 /* /NAVBAR */
 
 /* SCROLLBAR */
@@ -99,8 +102,8 @@ section#jumbotron{
     background-position: center;
 
 }
-
 /* /SECTION2 */
+
 
 
 
@@ -120,8 +123,48 @@ div.col-12 img:hover:hover{
     filter: brightness(60%);
 }
 
+div.col-6.col-sm-4{
+    border-radius: 30px;
+    filter: opacity(80%);
+    transition: top ease 0.3s;
+    top: 0;
+    position: relative;
+}
+div.col-6.col-sm-4:hover{
+    cursor: pointer;
+    filter:opacity(100%);
+    top: -5px;
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.4));
+}
+div.col-6.col-sm-4 img:hover{
+    outline: 3px solid #0b6cff;
+    outline-offset: 3px;
+}
+div.col-6.col-sm-4 img{
+    border-radius: 20px
+}
 
-
+.btn{
+    transition: 0.05s;
+}
+.btn:hover{ 
+    color: white;
+    outline: 3px solid #0b6cff;
+    outline-offset: 3px;
+}
+div.col-4.col-md-2 img{
+    opacity: 50%;
+    transition: 0.1s;
+}
+div.col-4.col-md-2:hover{
+    cursor: pointer;
+    opacity: 100%;
+    outline: 3px solid #0b6cff;
+    border-radius: 10px;
+}
+div.col-4.col-md-2:hover img{
+    opacity: 100%;
+}
 
 
 /* FOOTER */
